--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,10 +17,14 @@
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
     "@rainbow-me/rainbowkit": "1.1.2",
+    "@safe-global/protocol-kit": "^1.3.0",
+    "@safe-global/relay-kit": "^1.3.0",
+    "@safe-global/safe-core-sdk-types": "^2.3.0",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
     "daisyui": "^3.5.1",
+    "ethers": "^6.8.1",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "qrcode.react": "^3.1.0",
