--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -20,11 +20,12 @@
     "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/relay-kit": "^1.3.0",
     "@safe-global/safe-core-sdk-types": "^2.3.0",
+    "@tanstack/react-query": "^5.7.0",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
     "daisyui": "^3.5.1",
-    "ethers": "^6.8.1",
+    "ethers": "^5.7.2",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "qrcode.react": "^3.1.0",
@@ -32,6 +33,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.3",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "viem": "^1.16.6",
